welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: illegal start of simple expression
	while ()
               ^ColumnByColumn:17: error: ')' expected but '}' found.
}
^